--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,20 +1,39 @@
-    # Logs
-    logs/
-    target/*
-    .mvn/
-    .idea/
-    .gradle/
-    .classpath
-    .project
-    .settings/
-    .factorypath
-    .metadata/
-    .history/
-    .recommenders/
-    .launches/
-    .server/
-    .springBeans/
-    .vscode/
-    .DS_Store
-    .gitattributes
-    .gitmodules
+# Logs
+logs/
+
+# Build output
+target/
+
+# Maven wrapper (optional - remove if you want to track it)
+!.mvn/wrapper/maven-wrapper.properties
+
+# IDE - IntelliJ
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# IDE - Eclipse
+.classpath
+.project
+.settings/
+.factorypath
+.metadata/
+
+# IDE - VS Code
+.vscode/
+.history/
+
+# Gradle
+.gradle/
+
+# Spring
+.springBeans/
+
+# OS
+.DS_Store
+
+# Other
+.recommenders/
+.launches/
+.server/
