redirect issue fixed

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -15,6 +15,13 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
+    # Health check endpoint
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
+
     # Proxy API requests to backend
     location /api/ {
         proxy_pass http://backend:8080;
@@ -32,18 +39,13 @@ server {
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+        try_files $uri =404;
     }
 
     # Handle client-side routing - serve index.html for all routes
+    # This must be last to catch all non-matching routes
     location / {
         try_files $uri $uri/ /index.html;
-    }
-
-    # Health check endpoint
-    location /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
     }
 }
 
