--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -24,7 +24,7 @@ server {
 
     # Proxy API requests to backend
     location /api/ {
-        proxy_pass http://backend:8080;
+        proxy_pass https://erp-monorepo.onrender.com;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
