--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,32 +1,18 @@
 # Build stage using Bun
-FROM jarredsumner/bun:latest AS build
-
+FROM oven/bun:latest AS build
 WORKDIR /app
 
-# Copy package files
-COPY package.json bun.lockb ./
+# Copy lock & package files
+COPY package.json bun.lock* ./
 
-# Install dependencies with Bun
+# Install & build
 RUN bun install
-
-# Copy source code
 COPY . .
-
-# Build React app (assuming you have a build script)
 RUN bun run build
 
-# Production stage: serve with Nginx
+# Production stage: serve static files
 FROM nginx:alpine
-
-# Remove default nginx static files
 RUN rm -rf /usr/share/nginx/html/*
-
-# Copy built React app
 COPY --from=build /app/dist /usr/share/nginx/html
-
-# Copy nginx configuration
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
