--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,14 +10,14 @@ server {
         add_header Content-Type text/plain;
     }
 
-    # Serve static assets with caching
+    # Serve static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
         try_files $uri =404;
     }
 
-    # Handle client-side routing - serve index.html for all React routes
+    # Handle React client-side routing
     location / {
         try_files $uri /index.html;
     }
