--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -51,3 +51,7 @@ logging:
     root: INFO
     com.erp: INFO
 
+# CORS Configuration
+cors:
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:5173,https://erp-monorepo-1.onrender.com}
+
